styles/pages.scss
/* ... */
.head-wrap .head-category-area .head-category span {
  display: none;
}

.modal_cate {
  z-index: 100;
  position: fixed;
  inset: 0;
  font-family: var(--body-font);
}

.modal_cate .modal_overlay {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 90;
}

.modal_cate .modal_body {
  position: relative;
  height: 85%;
  bottom: -15%;
  margin: 0px;
  z-index: 95;
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  overflow-y: auto;
}

.modal_cate .modal_body .modal_content {
  position: relative;
  max-width: 600px;
  border-radius: 6px 6px 0 0;
  height: 100%;
  width: 100%;
  overflow: hidden auto;
  background: var(--container-color);
}

.modal_cate .modal_body .modal_content .modal_overflow-y {
  padding: 30px;
  height: 100%;
  overflow-y: auto;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .modal_header {
  position: relative;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .modal_header .mod_header {
  padding: 0px;
  margin-bottom: 23.5px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .modal_header .mod_header div {
  font-size: 18px;
  font-weight: 500;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .mod_content {
  position: relative;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .mod_content .feed_item_list {
  display: flex;
  flex-wrap: wrap;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .mod_content .feed_item_list li {
  display: inline-flex;
  width: 100%;
  padding: 7px 0;
}

.modal_cate .modal_body .modal_content .modal_overflow-y .mod_content .feed_item_list li .item {
  padding: 0px 7.5px;
  position: relative;
  transition: all 0.5s ease 0s;
  display: flex;
  align-items: center;
  font-size: 24px;
  font-weight: 500;
  color: var(--text-color-alt);
}

.modal_cate .modal_body .modal_content .modal_overflow-y .mod_content .feed_item_list li .item.is--on {
  font-weight: 700;
  color: var(--text-color);
}

.modal_body hr {
  margin: 16.5px 0px 24.5px;
  border-right: none;
  border-bottom: none;
  border-left: none;
  -o-border-image: initial;
  border-image: initial;
  border-top: 1px solid var(--scroll-thumb-color-alt);
}

/*=============== MEDIA QUERIES ===============*/

@media screen and (max-width: 2170px) {
  .card-area {
    grid-template-columns: repeat(4, 330px);
  }

  .card-adver {
    grid-column: 4;
  }
}

@media screen and (max-width: 1810px) {
  .content-comp .content-warpper {
    grid-template-columns: 260px auto;
  }

  .content-comp .nav-area {
    width: 230px;
  }

  .card-area {
    grid-template-columns: repeat(4, 300px);
    grid-gap: 25px;
  }

  .card-area .card,
  .card-adver {
    height: 340px;
    width: 300px;
  }

  .title-subtitle-date {
    height: 130px;
  }

  .adver-item {
    height: 76px;
    margin-top: 12px;
  }
}

@media screen and (max-width: 1600px) {
  .card-area {
    grid-template-columns: repeat(3, 300px);
  }

  .card-adver {
    grid-column: 3;
  }
}

@media screen and (max-width: 1260px) {
  .card-area {
    grid-template-columns: repeat(2, 300px);
  }

  .card-adver {
    grid-column: 2;
    grid-row: 2;
  }

  .card-adver .adver-header {
    display: none;
  }
}

@media screen and (max-width: 1024px) {
  .content-comp {
    padding: 40px 20px 0;
  }

  .content-comp .content-warpper {
    grid-template-columns: unset;
  }

  .content-comp .nav-area {
    display: flex;
    height: 100%;
    margin-top: 0;
    opacity: 0;
    padding-top: 20px;
    pointer-events: none;
    position: fixed;
    transform: translateY(10px);
    width: 100%;
    z-index: 5000;
  }

  .content-comp .content-area {
    padding-top: 90px;
  }

  .footer-wrapper {
    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
    margin-left: 0;
    margin-right: 0;
  }

  .head-wrap {
    display: block;
    top: 0;
  }

  .head-wrap .head-category-area .head-category span {
    border-radius: 10px;
    display: inline-block;
    height: 30px;
    position: absolute;
    right: 16px;
    top: 50%;
    transform: translateY(-50%);
    width: 30px;
  }

  .nav-area {
    display: flex;
    height: 100%;
    margin-top: 0;
    opacity: 0;
    padding-top: 20px;
    pointer-events: none;
    position: fixed;
    transform: translateY(10px);
    width: 100%;
    z-index: 5000;
  }

  .nav-area.is--open {
    opacity: 1;
    pointer-events: auto;
    transform: translateY(0);
  }
}

@media screen and (max-width: 768px) {
  .content-comp {
    padding: 20px 0 0;
  }

  .content-warpper {
    width: 100%;
  }

  .card-area {
    grid-template-columns: repeat(1, 1fr);
  }

  .content-area>.title {
    font-size: 16px;
    height: 20px;
    padding: 0 20px;
  }
}

